backport to java17 26.2.1