@@ -53,7 +53,7 @@ public class DatabaseContext extends ThreadLocal<Map<String, DatabaseContext.Dat
     if (map == null) {
       map = new HashMap<>();
       set(map);
-      CONTEXTS.put(Thread.currentThread().threadId(), map);
+      CONTEXTS.put(Thread.currentThread().getId(), map);
       current = new DatabaseContextTL();
       map.put(key, current);
     } else {
@@ -102,7 +102,7 @@ public class DatabaseContext extends ThreadLocal<Map<String, DatabaseContext.Dat
       if (map.isEmpty()) {
         // REMOVE THE THREAD LOCAL WHEN THE MAP IS EMPTY
         super.remove();
-        CONTEXTS.remove(Thread.currentThread().threadId());
+        CONTEXTS.remove(Thread.currentThread().getId());
       }
       return tl;
     }
@@ -149,7 +149,7 @@ public class DatabaseContext extends ThreadLocal<Map<String, DatabaseContext.Dat
    */
   public void removeCurrentThreadContexts() {
     super.remove();
-    CONTEXTS.remove(Thread.currentThread().threadId());
+    CONTEXTS.remove(Thread.currentThread().getId());
   }
 
   /**
@@ -158,7 +158,7 @@ public class DatabaseContext extends ThreadLocal<Map<String, DatabaseContext.Dat
   private static void cleanupDeadThreads() {
     final Set<Long> liveThreadIds = new HashSet<>();
     for (final Thread t : Thread.getAllStackTraces().keySet())
-      liveThreadIds.add(t.threadId());
+      liveThreadIds.add(t.getId());
     CONTEXTS.keySet().removeIf(id -> !liveThreadIds.contains(id));
   }
 
