@@ -1797,7 +1797,7 @@ public class LocalDatabase extends RWLockContext implements DatabaseInternal {
       }
 
       //LogManager.instance().log(this, Level.INFO, "LOCKED DATABASE FILE '%s' (thread=%s)", null, lockFile, Thread
-      // .currentThread().threadId());
+      // .currentThread().getId());
 
     } catch (final Exception e) {
       try {
@@ -1911,7 +1911,7 @@ public class LocalDatabase extends RWLockContext implements DatabaseInternal {
           if (lockFileLock != null) {
             lockFileLock.release();
             //LogManager.instance().log(this, Level.INFO, "RELEASED DATABASE FILE '%s' (thread=%s)", null, lockFile,
-            // Thread.currentThread().threadId());
+            // Thread.currentThread().getId());
           }
           if (lockFileIOChannel != null)
             lockFileIOChannel.close();
@@ -2057,7 +2057,7 @@ public class LocalDatabase extends RWLockContext implements DatabaseInternal {
     if (retryDelay > 0) {
       LogManager.instance()
           .log(this, Level.FINE, "Wait %d ms before the next retry for transaction commit (threadId=%d)", retryDelay,
-              Thread.currentThread().threadId());
+              Thread.currentThread().getId());
 
       try {
         Thread.sleep(1 + ThreadLocalRandom.current().nextInt(retryDelay));
