@@ -812,7 +812,7 @@ vectorBuilder.pqTrainingLimit);
           // IMPORTANT: Must match the validation logic used during graph building
           final String vectorProp =
               metadata.propertyNames != null && !metadata.propertyNames.isEmpty() ?
-               metadata.propertyNames.getFirst() : "vector";
+               metadata.propertyNames.get(0) : "vector";
 
           this.ordinalToVectorId = vectorIndex.getAllVectorIds().filter(id -> {
             final VectorLocationIndex.VectorLocation loc = vectorIndex.getLocation(id);
@@ -2317,7 +2317,7 @@ vectorBuilder.pqTrainingLimit);
         // Create lazy-loading RandomAccessVectorValues
         // Vector property name is the first property in the index
         final String vectorProp =
-            metadata.propertyNames != null && !metadata.propertyNames.isEmpty() ? metadata.propertyNames.getFirst() :
+            metadata.propertyNames != null && !metadata.propertyNames.isEmpty() ? metadata.propertyNames.get(0) :
              "vector";
 
         final RandomAccessVectorValues vectors = new ArcadePageVectorValues(getDatabase(), metadata.dimensions,
@@ -3595,7 +3595,7 @@ vectorBuilder.pqTrainingLimit);
 
       // Create vector values accessor for graph serialization
       final String vectorProp =
-          metadata.propertyNames != null && !metadata.propertyNames.isEmpty() ? metadata.propertyNames.getFirst() :
+          metadata.propertyNames != null && !metadata.propertyNames.isEmpty() ? metadata.propertyNames.get(0) :
           "vector";
       final RandomAccessVectorValues vectors = new ArcadePageVectorValues(getDatabase(), metadata.dimensions,
        vectorProp,
