@@ -48,7 +48,7 @@ public class FunctionCall extends SimpleNode {
     if (this.params.size() != 1)
       return false;
 
-    final Expression param = params.getFirst();
+    final Expression param = params.get(0);
     if (param.mathExpression == null || !(param.mathExpression instanceof final BaseExpression base))
       return false;
 
